--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mi proyecto final</title>
     <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
   </head>
   <body>
     <div id="titulo">
@@ -31,14 +34,13 @@
       <div class="container">
         <div class="seccion-juego">
           <h3>Lista de juegos</h3>
-          <ul id="lista">
-            
-          </ul>
+          <ul id="lista"></ul>
         </div>
         <div class="agregar-juego">
           <input type="text" id="input" placeholder="  + Agregar nuevo juego" />
           <lord-icon
-            class="i" id="boton-enter"
+            class="i"
+            id="boton-enter"
             src="https://cdn.lordicon.com/xdakhdsq.json"
             trigger="hover"
           >
@@ -46,6 +48,7 @@
         </div>
       </div>
       <script type="module" src="/main.js"></script>
+    
     </main>
   </body>
 </html>
